--- a/pages/v1.0/1.0.html
+++ b/pages/v1.0/1.0.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="shortcut icon" href="https://raw.githubusercontent.com/sancho1952007/Text_View/main/images/icon.png"/>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
