--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <center>About/Download v1.0</center>
     </div>
 
-    <div id='content'>
+    <div id='content' onclick='window.location.href="pages/v2.0/2.0.html"'>
         <center>About/Download v2.0</center>
     </div>
 <h1 id='ending'>Thank You For Visiting!</h1>
