--- a/pages/v2.0/2.0.html
+++ b/pages/v2.0/2.0.html
@@ -25,6 +25,7 @@
     <br>7) New GUI Design Than v1.0.
     <br>8) New "Dark Mode" And "Auto Dark Mode Detect" Added.
     <br>9) New Settings GUI Design Added.
+    <br>10) Error Handling Added.
     <br><br>
     Much More to Come...
     <br><br>
