--- a/pages/404.html
+++ b/pages/404.html
@@ -133,7 +133,7 @@ body {
   -webkit-transform: translateX(-50%);
       -ms-transform: translateX(-50%);
           transform: translateX(-50%);
-  background: url('https://raw.githubusercontent.com/sancho1952007/sancho1952007.github.io/main/img/bg.jpg') no-repeat;
+  background: url('https://i.ibb.co/THsjdwb/bg.jpg') no-repeat;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   background-size: cover;
