--- a/pages/v2.0/2.0.html
+++ b/pages/v2.0/2.0.html
@@ -39,7 +39,7 @@
     But, it is completly Safe!<br>So, Go Ahead and Install it!<br><br></p>
 </div>
     <div id='download'>
-        <center><button id='download' style="border: none;">Under Development...</button></center></div>
+        <center><button id='download' style="border: none;" onclick='window.location.href="https://mega.nz/file/LBJXCSYJ#mmdeKHEOh3XUjmiumplUNtHri08esmtuuMo-ZEcwSJE"'>Click Here to Download</button></center></div>
 <h1 id='ending'>Thank You For Visiting!</h1>
 </body>
 <style>
