--- a/update.html
+++ b/update.html
@@ -11,7 +11,7 @@
        <span>2.0</span>
     </div>
     <div class='link'>
-        <span>https://mega.nz/folder/TZw1yKTC#2OpeY1RUyxlwBQJY8uU-Ww</span>
+        <span>https://mega.nz/file/LBJXCSYJ#mmdeKHEOh3XUjmiumplUNtHri08esmtuuMo-ZEcwSJE</span>
     </div>
 </body>
 </html>
