--- a/update.html
+++ b/update.html
@@ -11,7 +11,7 @@
        <span>2.0</span>
     </div>
     <div class='link'>
-        <span>https://mega.nz/file/LBJXCSYJ#mmdeKHEOh3XUjmiumplUNtHri08esmtuuMo-ZEcwSJE</span>
+        <span>https://mega.nz/file/KJBkxBra#-f9fVd59zN8IXxMrNOQwBIZvPIgYE4Q8KnJDjkK_sl4</span>
     </div>
 </body>
 </html>
