--- a/Error.html
+++ b/Error.html
@@ -27,6 +27,7 @@
                  Solution: Allow Microsoft To Run This App, This App is Completely Safe (If Downloaded From the <a href='https://sancho1952007.github.io/Text_View' target='_blank' title='Open Official Website'>Official Website</a>).
                  <br><br><br><br>
                  Note: Current Text View Versions Does Not Support Binary Reading/Writing.
+             <br>The Text View Window Will Hang When Your Browser is open for a Text View Update.
              </strong>
     </div>
     <center><h1>Sorry For The Inconvience 😔</h1></center>
